--- a/src/PA/GeneralBundle/Resources/views/Default/interfaceGestion.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/interfaceGestion.html.twig
@@ -36,12 +36,12 @@
 						<td>Brigitte</td>
 						<td>Bardot</td>
 						<td>super.brigitte@gg.fr</td>
-						<td>Looser</td>
+						<td>Protectrice</td>
 						<td align=center>
 							<p>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="Voir détail" role="button"><i class="fa fa-fw fa-info"></i></a>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="Modifier l'annonce" role="button"><i class="fa fa-fw fa-gear"></i></a>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="Supprimer l'annonce" role="button"><i class="fa fa-fw fa-times"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="{{ 'interfaceG_table_detail_button' | trans }}" role="button"><i class="fa fa-fw fa-info"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="{{ 'interfaceG_table_edit_button' | trans }}" role="button"><i class="fa fa-fw fa-gear"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="{{ 'interfaceG_table_delete_button' | trans }}" role="button"><i class="fa fa-fw fa-times"></i></a>
 							</p>
 						</td>
 					</tr>
@@ -49,12 +49,12 @@
 						<td>Brigitte</td>
 						<td>Bardot</td>
 						<td>super.brigitte@gg.fr</td>
-						<td>Looser</td>
+						<td>Protectrice</td>
 						<td align=center>
 							<p>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="Voir détail" role="button"><i class="fa fa-fw fa-info"></i></a>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="Modifier l'annonce" role="button"><i class="fa fa-fw fa-gear"></i></a>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="Supprimer l'annonce" role="button"><i class="fa fa-fw fa-times"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="{{ 'interfaceG_table_detail_button' | trans }}" role="button"><i class="fa fa-fw fa-info"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="{{ 'interfaceG_table_edit_button' | trans }}" role="button"><i class="fa fa-fw fa-gear"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="{{ 'interfaceG_table_delete_button' | trans }}" role="button"><i class="fa fa-fw fa-times"></i></a>
 							</p>
 						</td>
 					</tr>
@@ -62,19 +62,19 @@
 						<td>Brigitte</td>
 						<td>Bardot</td>
 						<td>super.brigitte@gg.fr</td>
-						<td>Looser</td>
+						<td>Protectrice</td>
 						<td align=center>
 							<p>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="Voir détail" role="button"><i class="fa fa-fw fa-info"></i></a>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="Modifier l'annonce" role="button"><i class="fa fa-fw fa-gear"></i></a>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="Supprimer l'annonce" role="button"><i class="fa fa-fw fa-times"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="{{ 'interfaceG_table_detail_button' | trans }}" role="button"><i class="fa fa-fw fa-info"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="{{ 'interfaceG_table_edit_button' | trans }}" role="button"><i class="fa fa-fw fa-gear"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="{{ 'interfaceG_table_delete_button' | trans }}" role="button"><i class="fa fa-fw fa-times"></i></a>
 							</p>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 			<form-group class="pull-right">
-				<a href="{{ path('pa_annonce_ajouter') }}" class="btn btn-success btn-sm active" role="button"><i class="fa fa-plus"></i> {{ 'interfaceG_table_add_button' | trans }}</a>
+				<a href="{{ path('pa_annonce_ajouter') }}" class="btn btn-success btn-sm active" title="{{ 'interfaceG_table_title_add_button' | trans }}" role="button"><i class="fa fa-plus"></i> {{ 'interfaceG_table_add_button' | trans }}</a>
 			</form-group>
 		</div>
 
@@ -112,9 +112,9 @@
 						<td>15€</td>
 						<td align=center>
 							<p>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="Voir détail" role="button"><i class="fa fa-fw fa-info"></i></a>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="Modifier l'annonce" role="button"><i class="fa fa-fw fa-gear"></i></a>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="Supprimer l'annonce" role="button"><i class="fa fa-fw fa-times"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="{{ 'interfaceG_table_detail_button' | trans }}" role="button"><i class="fa fa-fw fa-info"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="{{ 'interfaceG_table_edit_button' | trans }}" role="button"><i class="fa fa-fw fa-gear"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="{{ 'interfaceG_table_delete_button' | trans }}" role="button"><i class="fa fa-fw fa-times"></i></a>
 							</p>
 						</td>
 					</tr>
@@ -126,9 +126,9 @@
 						<td>15€</td>
 						<td align=center>
 							<p>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="Voir détail" role="button"><i class="fa fa-fw fa-info"></i></a>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="Modifier l'annonce" role="button"><i class="fa fa-fw fa-gear"></i></a>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="Supprimer l'annonce" role="button"><i class="fa fa-fw fa-times"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="{{ 'interfaceG_table_detail_button' | trans }}" role="button"><i class="fa fa-fw fa-info"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="{{ 'interfaceG_table_edit_button' | trans }}" role="button"><i class="fa fa-fw fa-gear"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="{{ 'interfaceG_table_delete_button' | trans }}" role="button"><i class="fa fa-fw fa-times"></i></a>
 							</p>
 						</td>
 					</tr>
@@ -140,16 +140,16 @@
 						<td>15€</td>
 						<td align=center>
 							<p>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="Voir détail" role="button"><i class="fa fa-fw fa-info"></i></a>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="Modifier l'annonce" role="button"><i class="fa fa-fw fa-gear"></i></a>
-								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="Supprimer l'annonce" role="button"><i class="fa fa-fw fa-times"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="{{ 'interfaceG_table_detail_button' | trans }}" role="button"><i class="fa fa-fw fa-info"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="{{ 'interfaceG_table_edit_button' | trans }}" role="button"><i class="fa fa-fw fa-gear"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="{{ 'interfaceG_table_delete_button' | trans }}" role="button"><i class="fa fa-fw fa-times"></i></a>
 							</p>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 			<form-group class="pull-right">
-				<a href="#" class="btn btn-success btn-sm active" role="button"><i class="fa fa-plus"></i> {{ 'interfaceG_table_add_button' | trans }}</a>
+				<a href="{{ path('pa_annonce_ajouter') }}" class="btn btn-success btn-sm active" title="{{ 'interfaceG_table_title_add_button' | trans }}" role="button"><i class="fa fa-plus"></i> {{ 'interfaceG_table_add_button' | trans }}</a>
 			</form-group>
 		</div>
 
