--- a/src/PA/AnnonceBundle/Resources/views/Annonce/detailAnnonce.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/detailAnnonce.html.twig
@@ -24,21 +24,21 @@
 		        <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450&text=Modifie%20moi" alt="{ { annonce.antitre } }">
 		    </a>
 			<p>Description :</p>
-			<p>{ { annonce.andescription } }</p> <!-- | truncate(20, false, '...')  a rajouter -->
+			<p>{ { annonce.andescription } }</p>
 		</div>
 
 		<div class="col-md-3">
-			<b>Prix : { { annonce.anprix } } €</b>
+			<b>Prix : { { annonce.an_prix } } €</b>
 			<div class="clear"></div>
 			<ul>
 				<li role="presentation">GESTION DE VOTRE ANNONCE</li>
-				{% if is_granted('ROLE_ADMIN') or (is_granted('ROLE_USER') and ( app.user.id == annonce.anuser )) %}
+				{% if is_granted('ROLE_ADMIN') or (is_granted('ROLE_USER') and ( app.user.id == annonce.anuserid )) %}
 				<li>
-					<a href="#" class="btn btn-warning" role="button"><i class="fa fa-fw fa-gear"></i>{{ 'button_edit_ads' | trans }}</a>
+					<a href="{{ path('pa_annonce_modifier', {'id': annonce.anid}) }}" class="btn btn-warning" role="button"><i class="fa fa-fw fa-gear"></i>{{ 'button_edit_ads' | trans }}</a>
 				</li>
 				<div class="clear"></div>
 				<li>
-					<a href="#" class="btn btn-danger" role="button"><i class="fa fa-fw fa-times"></i>{{ 'button_delete_ads' | trans }}</a>
+					<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-danger" role="button"><i class="fa fa-fw fa-times"></i>{{ 'button_delete_ads' | trans }}</a>
 				</li>
 				{% endif %}
 			</ul>
