--- a/src/PA/AnnonceBundle/Resources/views/Annonce/mesannonces.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/mesannonces.html.twig
@@ -45,17 +45,17 @@
 				            <img class="img-responsive img-portfolio img-hover" src="{{ annonce.animage }}" alt="{{ annonce.antitre }}">
 				        </a>
 					    <div class="text-center">
-			        		<h4>{{annonce.antitre}}</h4>
-					        <p>{{ annonce.andescription }}</p> <!-- | truncate(20, false, '...')  a rajouter -->
+			        		<h4>{{ annonce.antitre }}</h4>
+					        <p>{{ annonce.andescription | truncate ( 40 ) }}</p>
 					        <b>{{ annonce.anprix }} €</b>
 					        <div class="clear"></div>
 	                        <ul class="list-inline">
 	                            <li>
-	                            	<a href="path('pa_annonce_detail_annonce')" class="btn btn-primary" role="button"><i class="fa fa-fw fa-info"></i>{{ 'button_voir_detail' | trans }}</a>
+	                            	<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-primary" role="button"><i class="fa fa-fw fa-info"></i>{{ 'button_voir_detail' | trans }}</a>
 	                            </li>
 	                            {% if is_granted('ROLE_ADMIN') or (is_granted('ROLE_USER') and ( app.user.id == annonce.anuser )) %}
 		                        <li>
-		                        	<a href="path('pa_annonce_detail_annonce')" class="btn btn-warning" role="button"><i class="fa fa-fw fa-gear"></i>{{ 'button_edit_ads' | trans }}</a>
+		                        	<a href="{{ path('pa_annonce_modifier', {'id': annonce.anid}) }}" class="btn btn-warning" role="button"><i class="fa fa-fw fa-gear"></i>{{ 'button_edit_ads' | trans }}</a>
 		                        </li>
 	                            {% endif %}
 	                        </ul>
