--- a/src/PA/AnnonceBundle/Resources/views/Annonce/detailAnnonce.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/detailAnnonce.html.twig
@@ -18,7 +18,7 @@
 	    <p>{{ 'fil_ariane_text' | trans }}<a title="{{ 'Accueil_title' | trans }}" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_annonce_afficher_mesannonces') }}">{ { annonce.antitre } }</a></p>
 		<hr />
 		
-
+		{% if annonce is not empty %}
 		<div class="col-md-9">
 		    <a href="http://placehold.it/700x450&text=Modifie%20moi">
 		        <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450&text=Modifie%20moi" alt="{ { annonce.antitre } }">
@@ -43,6 +43,7 @@
 				{% endif %}
 			</ul>
 		</div>
+		{% endif %}
 	</div>
 </div>
 <!-- /.container -->
