--- a/src/PA/AnnonceBundle/Resources/views/Annonce/detailAnnonce.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/detailAnnonce.html.twig
@@ -14,21 +14,22 @@
 
 	<!-- First section -->
 	<div class="row">
-		<h2 class="page-header">{ { annonce.antitre } }</h2>
+		{% if annonce is not empty %}
+		<h2 class="page-header">{{ annonce.antitre }}</h2>
 	    <p>{{ 'fil_ariane_text' | trans }}<a title="{{ 'Accueil_title' | trans }}" href="{{ path('pa_general_accueil') }}">{{ 'Accueil_title' | trans }}</a> >> <a href="{{ path('pa_annonce_afficher_mesannonces') }}">{ { annonce.antitre } }</a></p>
 		<hr />
 		
-		{% if annonce is not empty %}
+		
 		<div class="col-md-9">
 		    <a href="http://placehold.it/700x450&text=Modifie%20moi">
 		        <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450&text=Modifie%20moi" alt="{ { annonce.antitre } }">
 		    </a>
 			<p>Description :</p>
-			<p>{ { annonce.andescription } }</p>
+			<p>{{ annonce.andescription }}</p>
 		</div>
 
 		<div class="col-md-3">
-			<b>Prix : { { annonce.an_prix } } €</b>
+			<b>Prix : {{ annonce.anprix }} €</b>
 			<div class="clear"></div>
 			<ul>
 				<li role="presentation">GESTION DE VOTRE ANNONCE</li>
@@ -38,12 +39,14 @@
 				</li>
 				<div class="clear"></div>
 				<li>
-					<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-danger" role="button"><i class="fa fa-fw fa-times"></i>{{ 'button_delete_ads' | trans }}</a>
+					<a href="{{ path('pa_annonce_detail_annonce', {'id': annonce.anid}) }}" class="btn btn-danger" role="button"><i class="fa fa-fw fa-times"></i>{{ 'button_delete_ads' | trans }}</a>
 				</li>
 				{% endif %}
 			</ul>
 		</div>
-		{% endif %}
+	    {% else %}
+	    {{'no_result_annonces' | trans}}
+	    {% endif %}
 	</div>
 </div>
 <!-- /.container -->
