--- a/src/PA/AnnonceBundle/Resources/views/Annonce/listeannonces.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/listeannonces.html.twig
@@ -24,7 +24,7 @@
 	    {% for annonce in annonces %}
 		    <div class="col-md-4 col-sm-6">
 		        <div class="thumbnail">
-			        <a href="{{ path('pa_annonce_detail_annonce') }}">
+			        <a href="{{ path('pa_annonce_detail_annonce', {'id': annonce.anid}) }}">
 			            <img class="img-responsive img-portfolio img-hover" src="{{ annonce.animage }}" alt="{{ annonce.antitre }}">
 			        </a>
 				    <div class="text-center">
@@ -34,7 +34,7 @@
 				        <div class="clear"></div>
                         <ul class="list-inline">
                             <li>
-                            	<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-primary" role="button"><i class="fa fa-fw fa-info"></i>{{ 'button_voir_detail' | trans }}</a>
+                            	<a href="{{ path('pa_annonce_detail_annonce', {'id': annonce.anid}) }}" class="btn btn-primary" role="button"><i class="fa fa-fw fa-info"></i>{{ 'button_voir_detail' | trans }}</a>
                             </li>
                             {% if is_granted('ROLE_ADMIN') or (is_granted('ROLE_USER') and ( app.user.id == annonce.anuser )) %}
 	                        <li>
