--- a/src/PA/AnnonceBundle/Resources/views/Annonce/mesannonces.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/mesannonces.html.twig
@@ -51,7 +51,7 @@
 					        <div class="clear"></div>
 	                        <ul class="list-inline">
 	                            <li>
-	                            	<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-primary" role="button"><i class="fa fa-fw fa-info"></i>{{ 'button_voir_detail' | trans }}</a>
+	                            	<a href="{{ path('pa_annonce_detail_annonce', {'id': annonce.anid}) }}" class="btn btn-primary" role="button"><i class="fa fa-fw fa-info"></i>{{ 'button_voir_detail' | trans }}</a>
 	                            </li>
 	                            {% if is_granted('ROLE_ADMIN') or (is_granted('ROLE_USER') and ( app.user.id == annonce.anuser )) %}
 		                        <li>
