--- a/src/PA/GeneralBundle/Resources/views/Default/rechercher.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/rechercher.html.twig
@@ -79,7 +79,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> <!-- end panel panel-default -->
 	</div>
 	<div class="row">
 		<div class="form-group col-md-12 form-inline">
