Modification de la navbar Ajout de données dans le fichier de traduction

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,8 +34,8 @@
                     <a class="navbar-brand" href="{{ path('pa_general_accueil') }}">An Korn</a>
                 </div>
                 <form role="form"action="{{ path('afficher_resultat_annonce') }}" method="post">
-                    <div class="col-md-3" style="margin-top: 0.75%;"> 
-                        <input id="index_form_text" name="nom" placeholder="{{ 'index_form_pH_text' | trans }}" type="text" class="form-control" />
+                    <div class="col-md-4 col-md-offset-1" style="margin-top: 0.75%;"> 
+                        <input id="index_form_text" name="nom" placeholder="{{ 'Recherche_title' | trans }}" type="text" class="form-control" />
                     </div>
                 </form>
                 <!-- Collect the nav links, forms, and other content for toggling -->
