--- a/src/PA/GeneralBundle/Resources/views/Default/rechercher.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/rechercher.html.twig
@@ -86,7 +86,7 @@
 	        <!-- Reset and submit buttons section -->
 	        <div class="pull-right">
 				<button type="reset" class="btn btn-default">Réinitialiser</button>
-				<button type="submit" class="btn btn-success">Rechercher !</button>
+				<button type="submit" class="btn btn-primary">Rechercher !</button>
 			</div>
 		</div>
 	</div>
