--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -61,7 +61,7 @@
                                     <a href="{{path('pa_panier_afficher')}}">{{'Mon_compte_panier_title'|trans}}</a>
                                 </li>
                                 <li>
-                                    <a href="{{path('pa_general_mon_compte')}}">{{'Mon_compte_espace_title'|trans}}</a>
+                                    <a href="{{ path('pa_user_mon_compte') }}">{{'Mon_compte_espace_title'|trans}}</a>
                                 </li>
                                 {% if is_granted('ROLE_ADMIN') %}
                                 <li>
